# Simple

./: .gitignore  .pre-commit-config.yaml  README.md  flake.nix  mkdocs.yml  pyproject.toml
.github/workflows/: python-publish.yml  python.yml  release-trigger.yml
Simple/: __init__.py  __main__.py  def_parser.py  document.py  exceptions.py  htmlparser.py  logs.py
Simple/html/: __init__.py  document.py  exceptions.py  tags.py
docs/: index.md
examples/: Footer.html  Header.html  main.html  test.html
public/: main.html
tests/: __init__.py  __main__.py
tests/integration/: __init__.py  __main__.py
tests/integration/component_reference/: component.html  expected.html  index.html
tests/integration/nested_component/: component1.html  component2.html  expected.html  index.html
tests/integration/no_components/: expected.html  index.html
tests/integration/with_data/: data.json  expected.html  index.html
tests/unit/: __main__.py  test_document.py
