[tool.poetry]
name = "simple"
version = "0.1.0"
description = "Websites made simple"
authors = [
  "Nathan Graule <solarliner@gmail.com>",
  "Arthur Correnson <arthur.correnson@ens-rennes.fr>",
  "Tarek Kunze <arxaqapi@protonmail.com>"
]
packages = [
  { include = "Simple" }
]
license = "MIT"

[tool.poetry.scripts]
simple = "Simple.__main__:run"

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "^4.9.3"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
mypy = "^0.800"
commitizen = "^2.14.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.0.1"
tag_format = "$version"
